cleaned up info

--- a/templates/creditspage.html
+++ b/templates/creditspage.html
@@ -11,16 +11,16 @@
                     <div class="ui segment">
                         <h2 class="ui header">Team Members</h2>
 
-                        <h3 class="ui dividing header">Bradley Pahati: 500829758</h3>
-                        <p>Responsibilities: Webpage Development, Semantic UI Research and Implementation, CSS
-                            Styling</p>
-
-                        <h3 class="ui dividing header">Muhammad Siddiqui: 500837501</h3>
+			<h3 class="ui dividing header">Muhammad Siddiqui</h3>
                         <p>Responsibilities: Front-end Development with SemanticUI, Back-end Development with
                             Flask,
                             Hosting on Heroku, Writing of Webpage Content</p>
 
-                        <h3 class="ui dividing header">Lauren Gomes: 500824231</h3>
+                        <h3 class="ui dividing header">Bradley Pahati</h3>
+                        <p>Responsibilities: Webpage Development, Semantic UI Research and Implementation, CSS
+                            Styling</p>
+
+                        <h3 class="ui dividing header">Lauren Gomes</h3>
                         <p> Responsibilities: Webpage Development, Semantic UI Implementation, Research and
                             Writing of
                             Webpage Content</p>
